--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Motivational Phrases</title>
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="public/css/styles.css">
 </head>
 <body>
     <main></main>
-    <script src="./js/index.js" type="module"></script>
+    <script src="public/js/index.js" type="module"></script>
 </body>
 </html>
